added some commenting and fixed some bugs

--- a/templates/city_not_found.html
+++ b/templates/city_not_found.html
@@ -1,3 +1,5 @@
+<!-- The application will render this file if the city is not found and data is not available. -->
+
 {% extends "layout.html" %}
 {% block information %}
 <div class="not-found-messege">City Not Found.</div>
