--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+<!-- The application will render this file if the city is found and data is available. -->
+
 {% extends "layout.html" %}
 {% block information %}
 <div class="main-temp-wrapper">
